--- a/index.html
+++ b/index.html
@@ -1,315 +1,161 @@
-<!doctype html> 
-
-<html lang="en"> 
-
-<head> 
-
-  <meta charset="utf-8" /> 
-
-  <meta name="viewport" content="width=device-width,initial-scale=1" /> 
-
-  <title>Login UI</title> 
-
-  <style> 
-
-    :root{ 
-
-      --bg:#08a6c9;        /* teal background */ 
-
-      --panel:#ffffff;     /* card */ 
-
-      --input-bg:#f3f6f7;  /* input background */ 
-
-      --accent:#a6e4bf;    /* soft green for button */ 
-
-      --accent-2:#7fd08f;  /* darker on hover */ 
-
-      --shadow: 0 10px 30px rgba(9,30,50,0.12); 
-
-      --radius:16px; 
-
-      --radius-sm:10px; 
-
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; 
-
-      -webkit-font-smoothing:antialiased; 
-
-      -moz-osx-font-smoothing:grayscale; 
-
-    } 
-
- 
-
-    html,body{ 
-
-      height:100%; 
-
-      margin:0; 
-
-      background: linear-gradient(180deg, var(--bg) 0%, #0a9dc6 50%, #0791b4 100%); 
-
-      display:flex; 
-
-      align-items:center; 
-
-      justify-content:center; 
-
-    } 
-
- 
-
-    /* Card */ 
-
-    .login-card{ 
-
-      width: 360px; 
-
-      max-width: calc(100% - 40px); 
-
-      background: var(--panel); 
-
-      border-radius: calc(var(--radius) + 4px); 
-
-      box-shadow: var(--shadow); 
-
-      padding: 36px 28px; 
-
-      position: relative; 
-
-      overflow: hidden; 
-
-    } 
-
- 
-
-    /* Rounded rectangle look behind inputs (subtle) */ 
-
-    .form-inner{ 
-
-      display:flex; 
-
-      flex-direction:column; 
-
-      gap:18px; 
-
-      align-items:stretch; 
-
-    } 
-
- 
-
-    /* Input wrapper to allow the vertical label on the right */ 
-
-    .field{ 
-
-      position:relative; 
-
-      display:flex; 
-
-      align-items:center; 
-
-      gap:12px; 
-
-    } 
-
- 
-
-    input[type="text"], 
-
-    input[type="password"]{ 
-
-      width:100%; 
-
-      padding:14px 16px; 
-
-      border-radius: var(--radius-sm); 
-
-      border: none; 
-
-      outline: none; 
-
-      background: var(--input-bg); 
-
-      box-shadow: inset 0 1px 0 rgba(0,0,0,0.02); 
-
-      font-size:15px; 
-
-      color:#17202a; 
-
-      box-sizing:border-box; 
-
-    } 
-
- 
-
-    /* vertical label on right side */ 
-
-    .vlabel{ 
-
-      position:absolute; 
-
-      right:-40px; /* nudges the rotated text into visible area */ 
-
-      top:50%; 
-
-      transform-origin: right center; 
-
-      transform: translateY(-50%) rotate(-90deg); 
-
-      font-size:13px; 
-
-      letter-spacing:1px; 
-
-      color:#667480; 
-
-      font-weight:600; 
-
-      user-select:none; 
-
-      white-space:nowrap; 
-
-    } 
-
- 
-
-    /* login button */ 
-
-    .btn{ 
-
-      display:inline-block; 
-
-      padding:12px 28px; 
-
-      border-radius: 28px; 
-
-      background: linear-gradient(180deg, var(--accent) 0%, #94e0a8 100%); 
-
-      border:none; 
-
-      cursor:pointer; 
-
-      font-weight:700; 
-
-      font-size:15px; 
-
-      color:#fff; 
-
-      box-shadow: 0 6px 18px rgba(11,90,40,0.12); 
-
-      transition: transform .14s ease, box-shadow .14s ease, background .14s ease; 
-
-      align-self:center; 
-
-      margin-top:6px; 
-
-      min-width:120px; 
-
-      text-transform:capitalize; 
-
-    } 
-
-    .btn:active{ transform: translateY(1px) scale(.997); } 
-
-    .btn:hover{ background: linear-gradient(180deg, var(--accent-2) 0%, #7fd08f 100%); } 
-
- 
-
-    /* Make card look like the photo: rounded pale rectangle inset */ 
-
-    .login-card::before{ 
-
-      content:""; 
-
-      position:absolute; 
-
-      inset:0; 
-
-      border-radius:inherit; 
-
-      background: linear-gradient(180deg, rgba(255,255,255,0.7), rgba(255,255,255,0.9)); 
-
-      opacity:0.04; 
-
-      pointer-events:none; 
-
-    } 
-
- 
-
-    /* small helper text */ 
-
-    .help{ 
-
-      text-align:center; 
-
-      color:#6c7a86; 
-
-      font-size:13px; 
-
-      margin-top:10px; 
-
-    } 
-
- 
-
-    /* responsive */ 
-
-    @media (max-width:420px){ 
-
-      .vlabel{ right:-26px; font-size:12px; } 
-
-      .login-card{ padding:26px 18px; } 
-
-    } 
-
-  </style> 
-
-</head> 
-
-<body> 
-
- 
-
-  <main class="login-card" role="main" aria-labelledby="login-heading"> 
-
-    <h1 id="login-heading" style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">Login</h1> 
-
- 
-
-    <form class="form-inner" onsubmit="event.preventDefault(); alert('Pretend logging in…');"> 
-
-      <div class="field" style="height:56px;"> 
-
-        <input id="username" name="username" type="text" placeholder="Enter username" autocomplete="username" required /> 
-
-        <div class="vlabel">USERNAME</div> 
-
-      </div> 
-
- 
-
-      <div class="field" style="height:56px;"> 
-
-        <input id="password" name="password" type="password" placeholder="Enter password" autocomplete="current-password" required /> 
-
-        <div class="vlabel">PASSWORD</div> 
-
-      </div> 
-
- 
-
-      <button class="btn" type="submit" aria-label="Log in">login</button> 
-
- 
-
-      <div class="help" aria-hidden="true">Forgot password? • Need an account?</div> 
-
-    </form> 
-
-  </main> 
-
- 
-
-</body> 
-
-</html> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Bee1</title>
+
+  <!-- Social Media Preview -->
+  <meta property="og:title" content="Bee1 Official Website" />
+  <meta property="og:description" content="All my links in one place." />
+  <meta property="og:image" content="https://your-image-link-here.png" />
+  <meta property="og:url" content="https://your-website-link.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <style>
+    body {
+      background: linear-gradient(90deg, gray, white, black);
+      background-size: 200%;
+      animation: shine 3s linear infinite;
+      color: white;
+      text-align: center;
+      font-family: 'Comic Neue', 'Comic Sans MS', cursive;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      color: white;
+      text-shadow: 0 0 8px white;
+      animation: glow 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 10px red, 0 0 20px white;
+      }
+      to {
+        text-shadow: 0 0 25px lightgray, 0 0 35px whitesmoke;
+      }
+    }
+
+    .links {
+      margin: 40px auto;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 40px;
+    }
+
+    a {
+      display: inline-block;
+      width: 180px;
+      padding: 15px;
+      background: gray;
+      color: whitesmoke;
+      border: 2px solid red;
+      border-radius: 10px;
+      box-shadow: 0 0 10px 2px red;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      font-size: 18px;
+    }
+
+    a:hover {
+      color: gray;
+      transform: scale(1.1);
+      box-shadow: 0 0 20px 5px white;
+      background: linear-gradient(100deg, black, gray, black);
+      background-size: 200%;
+      animation: shine 3s linear infinite;
+    }
+
+    .fa-brands {
+      margin-right: 10px;
+    }
+
+    .glow-btn {
+      background: linear-gradient(90deg, blue, red, purple);
+      background-size: 200%;
+      animation: shine 3s linear infinite;
+    }
+
+    @keyframes shine {
+      0% { background-position: 200% center; }
+      100% { background-position: 0 center; }
+    }
+
+    .about-box {
+      width: 70%;
+      margin: 50px auto;
+      padding: 25px;
+      background: rgba(0, 0, 0, 0.7);
+      border: 2px solid red;
+      border-radius: 15px;
+      box-shadow: 0 0 15px 4px red;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    .about-box h2 {
+      color: red;
+      text-shadow: 0 0 10px white;
+    }
+
+    .about-box p {
+      font-size: 18px;
+      line-height: 1.6;
+      color: lightgray;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    h4, h5 {
+      margin-top: 40px;
+    }
+
+    h5 {
+      color: red;
+    }
+  </style>
+</head>
+
+<body>
+
+  <h1>Welcome For This Website</h1>
+  <h1>Social Links...</h1>
+
+  <div class="links">
+    <a class="glow-btn" href="https://www.twitch.tv/k4r0_r6" target="_blank">
+      <i class="fa-brands fa-twitch"></i> Twitch
+    </a>
+
+    <a class="glow-btn" href="https://www.youtube.com/@karo-r6" target="_blank">
+      <i class="fa-brands fa-youtube"></i> YouTube
+    </a>
+  </div>
+
+  <h4>Discord Username: <span style="color: lightgray;">karor6</span></h4>
+
+  <div class="about-box">
+    <h2>About Me</h2>
+    <p>
+      Hello! I'm <strong>Bee1</strong> — a creator who enjoys gaming, streaming,
+      designing websites, and building fun online experiences.
+      I love learning new things and improving my skills every day.
+      This website is a small project to share my links and show my style!
+    </p>
+  </div>
+
+  <h5>Developed By: Bee1</h5>
+
+</body>
+</html>
