--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 
   <!-- Social Media Preview -->
   <meta property="og:title" content="Bee1 Official Website" />
-  <meta property="og:description" content="All my links in one place." />
-  <meta property="og:image" content="https://your-image-link-here.png" />
-  <meta property="og:url" content="https://your-website-link.com" />
+  <meta property="og:description" content="All my links in one place," />
+  <meta property="og:url" content="https://https://bee1-me.vercel.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Google Font -->
