Fix Open Graph URL in index.html
Corrected the Open Graph URL meta tag.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Social Media Preview -->
   <meta property="og:title" content="Bee1 Official Website" />
   <meta property="og:description" content="All my links in one place," />
-  <meta property="og:url" content="https://https://bee1-me.vercel.app/" />
+  <meta property="og:url" content="https://https://bee1-me," />
   <meta property="og:type" content="website" />
 
   <!-- Google Font -->
