--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
 
   <!-- Social Media Preview -->
   <meta property="og:title" content="Bee1 Official Website" />
-  <meta property="og:description" content="All my links in one place," />
+  <meta property="og:description" content="All my links in one place." />
+  <meta property="og:image" content="https://YOUR-IMAGE-LINK.png" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta property="og:url" content="https://bee1-me.vercel.app/" />
   <meta property="og:type" content="website" />
+
+  <!-- Twitter Preview -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Bee1 Official Website">
+  <meta name="twitter:description" content="All my links in one place.">
+  <meta name="twitter:image" content="https://YOUR-IMAGE-LINK.png">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
